@@ -18,8 +18,8 @@
 
 package org.mycore.common.xml;
 
-import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
@@ -33,7 +33,6 @@ import org.jdom2.filter.Filters;
 import org.jdom2.xpath.XPathExpression;
 import org.jdom2.xpath.XPathFactory;
 import org.mycore.common.MCRConstants;
-import org.mycore.common.MCRException;
 import org.mycore.common.config.MCRConfiguration;
 
 /**
@@ -45,7 +44,7 @@ public class MCRXPathEvaluator {
 
     private static final Pattern PATTERN_XPATH = Pattern.compile("\\{([^\\}]+)\\}");
 
-    private static final XPathFactory factory;
+    private static final XPathFactory XPATH_FACTORY;
 
     private Map<String, Object> variables;
 
@@ -53,7 +52,7 @@ public class MCRXPathEvaluator {
 
     static {
         String factoryClass = MCRConfiguration.instance().getString("MCR.XPathFactory.Class", null);
-        factory = factoryClass == null ? XPathFactory.instance() : XPathFactory.newInstance(factoryClass);
+        XPATH_FACTORY = factoryClass == null ? XPathFactory.instance() : XPathFactory.newInstance(factoryClass);
     }
 
     public MCRXPathEvaluator(Map<String, Object> variables, List<Object> context) {
@@ -73,11 +72,7 @@ public class MCRXPathEvaluator {
         while (m.find()) {
             String replacement = replaceXPathOrI18n(m.group(1));
             if (urlEncode) {
-                try {
-                    replacement = URLEncoder.encode(replacement, "UTF-8");
-                } catch (UnsupportedEncodingException ex) {
-                    throw new MCRException(ex);
-                }
+                replacement = URLEncoder.encode(replacement, StandardCharsets.UTF_8);
             }
             m.appendReplacement(sb, replacement);
         }
@@ -98,8 +93,9 @@ public class MCRXPathEvaluator {
                 String key = expression.substring(0, pos);
                 String xPath = expression.substring(pos + 1);
                 expression = "i18n:translate('" + key + "'," + xPath + ")";
-            } else
+            } else {
                 expression = "i18n:translate('" + expression + "')";
+            }
         }
         return expression;
     }
@@ -112,22 +108,23 @@ public class MCRXPathEvaluator {
 
     public boolean test(String xPathExpression) {
         Object result = evaluateFirst(xPathExpression);
-        if (result == null)
+        if (result == null) {
             return false;
-        else if (result instanceof Boolean)
+        } else if (result instanceof Boolean) {
             return (Boolean) result;
-        else
+        } else {
             return true;
+        }
     }
 
     public Object evaluateFirst(String xPathExpression) {
         try {
-            XPathExpression<Object> xPath = factory.compile(xPathExpression, Filters.fpassthrough(), variables,
+            XPathExpression<Object> xPath = XPATH_FACTORY.compile(xPathExpression, Filters.fpassthrough(), variables,
                 MCRConstants.getStandardNamespaces());
             return xPath.evaluateFirst(context);
         } catch (Exception ex) {
             LOGGER.warn("unable to evaluate XPath: {}", xPathExpression);
-            LOGGER.warn("XPath factory used is {} {}", factory.getClass().getCanonicalName(),
+            LOGGER.warn("XPath factory used is {} {}", XPATH_FACTORY.getClass().getCanonicalName(),
                 MCRConfiguration.instance().getString("MCR.XPathFactory.Class", null));
             LOGGER.warn(ex);
             return null;
