@@ -18,11 +18,10 @@
 
 package org.mycore.iiif.presentation;
 
-import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.stream.Collectors;
 
-import org.mycore.common.MCRException;
 import org.mycore.frontend.MCRFrontendUtil;
 import org.mycore.iiif.model.MCRIIIFBase;
 import org.mycore.iiif.presentation.model.additional.MCRIIIFAnnotation;
@@ -98,11 +97,7 @@ public class MCRIIIFPresentationUtil {
     }
 
     private static String encodeUTF8(String c) {
-        try {
-            return URLEncoder.encode(c, "UTF-8");
-        } catch (UnsupportedEncodingException e) {
-            throw new MCRException(e);
-        }
+        return URLEncoder.encode(c, StandardCharsets.UTF_8);
     }
 
 }
